--- a/index.html
+++ b/index.html
@@ -446,6 +446,12 @@
   background: #d32f2f;
 }
 
+.detail-layout {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+    
 /* Handy: Poster oben, Text unten */
 @media (max-width: 600px) {
   .detail-layout {
@@ -464,7 +470,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="Fritflix Feedback">
 <script>
-const VERSION = 'v1.2.6'; // ← Bei jedem Update ändern!
+const VERSION = 'v1.2.7'; // ← Bei jedem Update ändern!
 
 // === UPDATE BANNER STEUERUNG ===
 if ('serviceWorker' in navigator) {
@@ -1434,7 +1440,7 @@ async function loadLatestItems() {
       }
 
       const html = `
-        <div class="slider-item" onclick='openDetail(${JSON.stringify(item)})'>
+        <div class="slider-item" onclick='(${JSON.stringify(item)})'>
           <img src="${item.cover_url}" alt="${item.name}" loading="lazy"
                onerror="this.src='https://via.placeholder.com/110x165?text=?';">
           <h4>${item.name} ${item.year ? `(${item.year})` : ''}</h4>
@@ -1522,27 +1528,18 @@ function openDetail(item) {
 
   let trailerBtn = '';
   if (item.trailer) {
-    trailerBtn = `
-      <a href="${item.trailer}" target="_blank" class="detail-btn trailer">
-        🎬 Trailer ansehen
-      </a>`;
+    trailerBtn = `<a href="${item.trailer}" target="_blank" class="detail-btn trailer">🎬 Trailer ansehen</a>`;
   }
 
   let imdbBtn = '';
   if (item.ProviderIds?.Imdb) {
-    imdbBtn = `
-      <a href="https://www.imdb.com/title/${item.ProviderIds.Imdb}" target="_blank" class="detail-btn imdb">
-        ⭐ IMDb ${item.CommunityRating ? item.CommunityRating.toFixed(1) : '–'}
-      </a>`;
+    imdbBtn = `<a href="https://www.imdb.com/title/${item.ProviderIds.Imdb}" target="_blank" class="detail-btn imdb">⭐ IMDb ${item.CommunityRating ? item.CommunityRating.toFixed(1) : '–'}</a>`;
   }
 
   let rtHtml = '';
   if (item.CriticRating !== undefined) {
     const rtClass = item.CriticRating >= 60 ? 'fresh' : 'rotten';
-    rtHtml = `
-      <div class="detail-btn rt ${rtClass}">
-        🍅 RT ${item.CriticRating}%
-      </div>`;
+    rtHtml = `<div class="detail-btn rt ${rtClass}">🍅 RT ${item.CriticRating}%</div>`;
   }
 
   let seasonInfo = '';
@@ -1555,13 +1552,13 @@ function openDetail(item) {
   }
 
   content.innerHTML = `
-    <div class="detail-layout" style="display:flex; flex-wrap:wrap; gap:24px;">
+    <div class="detail-layout">
       <div style="flex:1; min-width:240px; text-align:center;">
         <img src="${item.poster_large || item.cover_url}" class="detail-poster" loading="lazy"
              onerror="this.src='https://via.placeholder.com/300x450?text=Poster';">
       </div>
       <div style="flex:2; min-width:300px;">
-        <h2>${item.name} ${item.year ? `(${item.year})` : ''}</h2>
+        <h2 class="detail-header">${item.name} ${item.year ? `(${item.year})` : ''}</h2>
         <div class="detail-meta">
           ${item.type === 'Movie' ? 'Film' : 'Serie'} • ${item.quality || '–'}
         </div>
@@ -1581,20 +1578,6 @@ function openDetail(item) {
 
   modal.style.display = 'flex';
 }
-
-// Schließen per Klick außerhalb
-document.getElementById('detailModal').addEventListener('click', e => {
-  if (e.target === e.currentTarget) {
-    e.currentTarget.style.display = 'none';
-  }
-});
-
-// Schließen per ESC
-document.addEventListener('keydown', e => {
-  if (e.key === 'Escape') {
-    document.getElementById('detailModal').style.display = 'none';
-  }
-});
 
 // Pfeile + Wischen (wie vorher)
 const sliderContainer = document.getElementById('slider-container');
@@ -1616,6 +1599,8 @@ window.addEventListener('resize', updateArrowState);
 
 // Init
 loadLatestItems();
+setInterval(loadStatus, 20000);  // Status alle 20s
+setInterval(loadLatestItems, 300000);  // Slider alle 5 Min
   </script>
 
   <div id="update-banner" style="
