--- a/index.html
+++ b/index.html
@@ -393,10 +393,7 @@
   box-shadow: 0 6px 20px rgba(0,0,0,0.6);
 }
 
-.detail-header h2 {
-  margin: 0 0 12px;
-  font-size: 1.6em;
-}
+.detail-header { margin: 0 0 12px; font-size: 1.6em; }
 
 .detail-meta {
   color: #aaa;
@@ -470,7 +467,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="Fritflix Feedback">
 <script>
-const VERSION = 'v1.2.7'; // ← Bei jedem Update ändern!
+const VERSION = 'v1.2.8'; // ← Bei jedem Update ändern!
 
 // === UPDATE BANNER STEUERUNG ===
 if ('serviceWorker' in navigator) {
@@ -1439,18 +1436,24 @@ async function loadLatestItems() {
         }
       }
 
-      const html = `
-        <div class="slider-item" onclick='(${JSON.stringify(item)})'>
-          <img src="${item.cover_url}" alt="${item.name}" loading="lazy"
-               onerror="this.src='https://via.placeholder.com/110x165?text=?';">
-          <h4>${item.name} ${item.year ? `(${item.year})` : ''}</h4>
-          <p>Qualität: ${item.quality || '–'}</p>
-          <p>Ton: ${audioHtml}</p>
-          ${seasonInfo ? `<p class="season-info">${seasonInfo}</p>` : ''}
-        </div>
-      `;
-      container.innerHTML += html;
-    });
+const html = `
+  <div class="slider-item" data-item='${encodeURIComponent(JSON.stringify(item))}'>
+    <img src="${item.cover_url}" alt="${item.name}" loading="lazy"
+         onerror="this.src='https://via.placeholder.com/110x165?text=?';">
+    <h4>${item.name} ${item.year ? `(${item.year})` : ''}</h4>
+    <p>Qualität: ${item.quality || '–'}</p>
+    <p>Ton: ${audioHtml}</p>
+    ${seasonInfo ? `<p class="season-info">${seasonInfo}</p>` : ''}
+  </div>
+`;
+container.innerHTML += html;
+
+      document.querySelectorAll('.slider-item[data-item]').forEach(el => {
+  el.addEventListener('click', () => {
+    const raw = decodeURIComponent(el.getAttribute('data-item'));
+    openDetail(JSON.parse(raw));
+  });
+});
 
     updateArrowState();
   } catch (e) {
@@ -1531,16 +1534,27 @@ function openDetail(item) {
     trailerBtn = `<a href="${item.trailer}" target="_blank" class="detail-btn trailer">🎬 Trailer ansehen</a>`;
   }
 
-  let imdbBtn = '';
-  if (item.ProviderIds?.Imdb) {
-    imdbBtn = `<a href="https://www.imdb.com/title/${item.ProviderIds.Imdb}" target="_blank" class="detail-btn imdb">⭐ IMDb ${item.CommunityRating ? item.CommunityRating.toFixed(1) : '–'}</a>`;
-  }
+let imdbBtn = '';
+if (item.imdb_id) {
+  imdbBtn = `
+    <a href="https://www.imdb.com/title/${item.imdb_id}"
+       target="_blank"
+       class="detail-btn imdb">
+       ⭐ IMDb
+    </a>
+  `;
+}
 
-  let rtHtml = '';
-  if (item.CriticRating !== undefined) {
-    const rtClass = item.CriticRating >= 60 ? 'fresh' : 'rotten';
-    rtHtml = `<div class="detail-btn rt ${rtClass}">🍅 RT ${item.CriticRating}%</div>`;
-  }
+let rottenHtml = '';
+if (item.rotten_rating != null) {
+  const score = Number(item.rotten_rating);
+  const rtClass = score >= 60 ? 'fresh' : 'rotten';
+  rottenHtml = `
+    <div class="detail-btn rt ${rtClass}">
+      🍅 Rotten ${score}%
+    </div>
+  `;
+}
 
   let seasonInfo = '';
   if (item.type === 'Series') {
@@ -1570,7 +1584,7 @@ function openDetail(item) {
         <div class="detail-actions">
           ${trailerBtn}
           ${imdbBtn}
-          ${rtHtml}
+          ${rottenHtml}
         </div>
       </div>
     </div>
@@ -1599,7 +1613,6 @@ window.addEventListener('resize', updateArrowState);
 
 // Init
 loadLatestItems();
-setInterval(loadStatus, 20000);  // Status alle 20s
 setInterval(loadLatestItems, 300000);  // Slider alle 5 Min
   </script>
 
